[gd_scene load_steps=21 format=3 uid="uid://dla83m2jj3gs4"]

[ext_resource type="Script" uid="uid://ddayqltrn20uf" path="res://scripts/boss_level_1.gd" id="1_prpuw"]
[ext_resource type="Texture2D" uid="uid://db5c7fmxadkdb" path="res://assets/sprites/boss-first-level.png" id="2_bi0nc"]
[ext_resource type="FontFile" uid="uid://dngxwutr0yk4e" path="res://assets/fonts/PixelOperator8.ttf" id="3_bi0nc"]
[ext_resource type="Texture2D" uid="uid://ba7tehhl1osbt" path="res://assets/sprites/bubble.png" id="3_m3pom"]
[ext_resource type="Texture2D" uid="uid://cmjjg84ajogrt" path="res://assets/sprites/waffle-character.png" id="5_qtjyj"]

[sub_resource type="Curve" id="Curve_5n8rf"]
_data = [Vector2(0, 0.506012), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_m3pom"]
_data = [Vector2(0.231638, 0.974988), 0.0, 0.0, 0, 0, Vector2(1, 0.146465), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_qtjyj"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.996667)
colors = PackedColorArray(0.967573, 0.649519, 0.948553, 1, 0.882353, 0, 0.0588235, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdgqc"]
size = Vector2(47, 107.667)

[sub_resource type="Animation" id="Animation_prpuw"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bi0nc"]
length = 0.001

[sub_resource type="Animation" id="Animation_qtjyj"]
resource_name = "tekst"
length = 4.0

[sub_resource type="Animation" id="Animation_5n8rf"]
resource_name = "float_middle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("characterAll/character/BossAttack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(22.678, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hf5m2"]
resource_name = "float_main"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("characterAll/character/BossAttack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(50.546, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("characterAll/character/BossTalk:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(56.284, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3pom"]
_data = {
&"RESET": SubResource("Animation_bi0nc"),
&"float": SubResource("Animation_prpuw"),
&"float_main": SubResource("Animation_hf5m2"),
&"float_middle": SubResource("Animation_5n8rf"),
&"tekst": SubResource("Animation_qtjyj")
}

[sub_resource type="Animation" id="Animation_m3pom"]
resource_name = "speech"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/bubble/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.04333, 6.04333, 8.67667, 8.84333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/character/BossRegular:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.04333, 2.36333, 2.56667, 2.81, 2.99, 3.31, 3.57667, 3.84333, 4.11, 4.37667, 4.61, 4.87667, 5.14333, 5.37667, 5.64333, 5.87667, 6.07667, 6.31, 6.65333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("characterAll/bubble/bubble:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.77667, 2.02667, 8.74333, 8.94333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(8.97667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"init"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("characterAll/character/BossAttack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("characterAll:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 0), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("characterAll/character/BossTalk:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7j4hw"]
length = 0.001

[sub_resource type="Animation" id="Animation_vl8lo"]
resource_name = "magic"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/Magic:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/character/BossAttack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333334, 0.1, 0.766667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("characterAll/Magic/PurpleMagic:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.766667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("characterAll/Magic/PurpleMagic2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.08, 0.696667, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_v00ig"]
resource_name = "explode"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("characterAll/explosion/explosion:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("characterAll/character/BossAttack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.00139886, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("characterAll/character/BossAttack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.19963),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("characterAll/character/BossTalk:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.19963),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("characterAll/character/BossTalk:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.19963),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("characterAll/Magic:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.19963),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("characterAll/shadow:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.19963),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vl8lo"]
_data = {
&"RESET": SubResource("Animation_7j4hw"),
&"explode": SubResource("Animation_v00ig"),
&"magic": SubResource("Animation_vl8lo"),
&"speech": SubResource("Animation_m3pom")
}

[node name="Boss" type="Area2D"]
z_index = 1
position = Vector2(500, 0)
scale = Vector2(3, 3)
script = ExtResource("1_prpuw")

[node name="characterAll" type="Node2D" parent="."]
z_index = 20
position = Vector2(67.9245, 0)

[node name="bubble" type="Node2D" parent="characterAll"]
position = Vector2(-170.333, -46.3333)

[node name="bubble" type="Sprite2D" parent="characterAll/bubble"]
position = Vector2(53, 23.3333)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_m3pom")
region_enabled = true
region_rect = Rect2(122, 27, 119, 57)

[node name="Label" type="Label" parent="characterAll/bubble"]
offset_left = 1.0252e-05
offset_right = 214.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bi0nc")
theme_override_font_sizes/font_size = 8
text = "Smak på den fulle
byråkratiske
kraften til 
fylkeskommunen!"
visible_characters = 0
visible_ratio = 0.0

[node name="character" type="Node2D" parent="characterAll"]

[node name="BossTalk" type="Sprite2D" parent="characterAll/character"]
position = Vector2(0, -0.166667)
texture = ExtResource("2_bi0nc")
region_enabled = true
region_rect = Rect2(0, 0, 86, 144)

[node name="BossRegular" type="Sprite2D" parent="characterAll/character"]
visible = false
texture = ExtResource("2_bi0nc")
region_enabled = true
region_rect = Rect2(85, 0, 86, 144)

[node name="BossAttack" type="Sprite2D" parent="characterAll/character"]
visible = false
position = Vector2(-5.66667, 0)
texture = ExtResource("2_bi0nc")
region_enabled = true
region_rect = Rect2(254, 0, 87, 144)

[node name="Magic" type="Node2D" parent="characterAll"]
visible = false

[node name="PurpleMagic" type="CPUParticles2D" parent="characterAll/Magic"]
position = Vector2(-20, 22.6667)
scale = Vector2(0.333333, 0.333333)
emitting = false
amount = 44
randomness = 0.54
use_fixed_seed = true
seed = 394520468
emission_shape = 1
emission_sphere_radius = 29.86
direction = Vector2(10, 10)
spread = 13.18
gravity = Vector2(0, 0)
initial_velocity_max = 20.0
angular_velocity_min = 100.0
angular_velocity_max = 200.0
scale_amount_min = 8.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5n8rf")
color = Color(0.928533, 0.558566, 0.961846, 1)
hue_variation_min = -1.0
hue_variation_max = 0.48

[node name="PurpleMagic2" type="CPUParticles2D" parent="characterAll/Magic"]
position = Vector2(-45.3333, 17.3333)
scale = Vector2(0.111111, 0.111111)
emitting = false
amount = 44
randomness = 0.54
use_fixed_seed = true
seed = 394520468
emission_shape = 1
emission_sphere_radius = 80.0
direction = Vector2(10, 10)
spread = 13.18
gravity = Vector2(0, 0)
initial_velocity_max = 20.0
angular_velocity_min = 100.0
angular_velocity_max = 200.0
scale_amount_min = 8.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5n8rf")
color = Color(0.928533, 0.558566, 0.961846, 1)
hue_variation_min = -1.0
hue_variation_max = 0.48

[node name="shadow" type="Sprite2D" parent="characterAll"]
visible = false
position = Vector2(-0.333328, 14.6667)
texture = ExtResource("2_bi0nc")
region_enabled = true
region_rect = Rect2(175, 0, 71, 144)

[node name="explosion" type="Node2D" parent="characterAll"]

[node name="PurpleMagic" type="CPUParticles2D" parent="characterAll/explosion"]
visible = false
position = Vector2(-20, 22.6667)
scale = Vector2(0.333333, 0.333333)
amount = 100
speed_scale = 0.6
explosiveness = 0.72
randomness = 1.0
use_fixed_seed = true
seed = 394520468
emission_shape = 1
emission_sphere_radius = 100.17
direction = Vector2(-100, 10)
spread = 13.18
gravity = Vector2(0, 0)
initial_velocity_min = 29.1
initial_velocity_max = 29.1
angular_velocity_min = 100.0
angular_velocity_max = 200.0
scale_amount_min = 8.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5n8rf")
color = Color(0.928533, 0.558566, 0.961846, 1)
hue_variation_min = -1.0
hue_variation_max = 0.48

[node name="explosion" type="CPUParticles2D" parent="characterAll/explosion"]
z_index = 6
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 80)
initial_velocity_min = 60.0
initial_velocity_max = 141.41
angular_velocity_max = 218.18
scale_amount_min = 20.0
scale_amount_max = 40.0
scale_amount_curve = SubResource("Curve_m3pom")
color_ramp = SubResource("Gradient_qtjyj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.5, 0.5)
shape = SubResource("RectangleShape2D_rdgqc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m3pom")
}
autoplay = "float"

[node name="SpeechPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vl8lo")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="attackbanner" type="Node2D" parent="CanvasLayer"]

[node name="Blank" type="Sprite2D" parent="CanvasLayer/attackbanner"]
position = Vector2(497, 507)
scale = Vector2(3, 3)
texture = ExtResource("5_qtjyj")
region_enabled = true
region_rect = Rect2(50, 244, 204, 9)

[node name="Filled" type="Sprite2D" parent="CanvasLayer/attackbanner"]
position = Vector2(200, 496)
scale = Vector2(3, 3)
texture = ExtResource("5_qtjyj")
centered = false
region_enabled = true
region_rect = Rect2(53, 234, 200, 7)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
